# CppStarter

./: CMakeLists.txt
include/greeter/: greeter.h
source/: greeter.cpp
standalone/source/: main.cpp
vcpkg_example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
